# fastcflare

./: 00_core.html  00_core.md  CHANGELOG.md  README.md  index.html  index.md  pyproject.toml  robots.txt  search.json  sitemap.xml
fastcflare/: _modidx.py  core.py  eps.py  mkeps.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
